Atualizações Site Desktop

--- a/indexmobile.html
+++ b/indexmobile.html
@@ -8,17 +8,33 @@
     <title>2evnt</title>
 </head>
 <body>
+    <!--Cabeçalho-->
     <div  class="bloco1" id="bloco1">
             <a class="button-small-text" href="https://www.sympla.com.br/connects-food--aproximando-distribuidores-varejistas-e-atacadistas__689787" target="_blank">
                <img src="https://www.sympla.com.br/images/btn-register se.png"></img> </a>        
     </div>
-   <svg width="360" height="227" viewBox="0 0 360 227" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <rect width="360" height="227" fill="#C4C4C4"/>
-    </svg>
+   
+   <!--Background-->
+   <header class="masthead" style="background-image: url('img/home1.png')">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="site-heading">
+                  
+                    <span class="subheading"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
     
+    <!--Texto Convite-->
    <h2 class="titulo"><b>Por que ir?</font></b></h2>
-   <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sapien aliquam erat morbi in sit pulvinar.
-        Sit sed semper turpis velit et ut eu nullam.</font></p>
+   <p class="paragrafo">Evento especial de networking voltado para o mercado de compras profissional (B2B), que tem como objetivo 
+       compartilhar cases de sucesso do setor e contribuir com integrações de pessoas do ramo. A conexão entre as pessoas é essencial 
+       para o sucesso dos negócios, e queremos promover isso de forma prática e eficiente. 
+        </font></p>
         <div id="sympla-widget-689787" height="auto"></div> <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/689787"></script>
 
     <h2 class="titulo">Patrocinadores</h2>
