Modificações no site e imagem responsiva

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="estilo/main.css" rel="stylesheet">
     <title>2evnt</title>
+    <style>
+        body{
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+        background-color: white;
+        }
+        img {  
+            display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        }
+        section{
+            padding: 45px;
+        }
+    </style>
 </head>
-<body>
+<body class="body">
     <!--Cabeçalho-->
     <div  class="bloco1" id="bloco1">
             <a class="button-small-text" href="https://www.sympla.com.br/connects-food--aproximando-distribuidores-varejistas-e-atacadistas__689787" target="_blank">
@@ -15,18 +31,24 @@
     </div>
    
    <!--Background-->
-   <header class="masthead" style="background-image: url('img/home1.png')">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-                <div class="imagem">
-                     <img src="img/img-desk-titulo.png" width="100%" height="600px">
-                 </div>        
-             </div>
-     </div>  
-    </div>
-</header>
+   <main>
+       <section>
+            <header class="masthead" style="background-image: url('')">
+                    <div class="overlay"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 col-md-10 mx-auto">
+                                <div class="imagem">
+                                     <img src="img/backgroundsite.jpeg" width="100%" >
+                                 </div>        
+                             </div>
+                     </div>  
+                    </div>
+                </header>
+       </section>
+      
+   </main>
+
     
     <!--Texto Convite-->
     <div class="box">
